--- a/blocks/footer_loop_en.liquid
+++ b/blocks/footer_loop_en.liquid
@@ -4,19 +4,19 @@
     <tr>
       <th valign="top" style="mso-line-height-rule: exactly;">
         <center style="width: 100%;">
-        <table border="0" width="620" cellpadding="0" cellspacing="0" align="center" style="width: 620px; min-width: 620px; max-width: 620px; direction: ltr; Margin: auto;" class="email-container" role="presentation">
+        <table border="0" width="620" cellpadding="0" cellspacing="0" align="center" style="width: 500px; min-width: 500px; max-width: 500px; direction: ltr; Margin: auto;" class="email-container" role="presentation">
           <tbody>
             <tr>
               <th valign="top" class="container_border" style="mso-line-height-rule: exactly;">
                 <!-- BEGIN : SECTION : FOOTER -->
                 <table class="sections_container footer" data-id="footer" id="section-footer" border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
                   <tr>
-                    <td class="section_border" style="mso-line-height-rule: exactly; padding: 45px 30px 30px;" bgcolor="#fefcf6">
+                    <td class="section_border" style="mso-line-height-rule: exactly; padding: 45px 20px 30px;" bgcolor="#fefcf6">
                       <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
                         <tr>
                           <th class="column_footer_logo section_content" width="50%" style="mso-line-height-rule: exactly; padding: 8px 30px;" align="left" bgcolor="#fefcf6">
                             <!-- Footer Logo : BEGIN -->
-                            <a href="{% capture link %}https://adamlippes.com/{% endcapture %} {{ link }}" target="_blank" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
+                            <a href="https://adamlippes.com/" target="_blank" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
                             <img src="https://cdn.filestackcontent.com/api/file/fVdwxQyMT9CeyvqpH19I/convert?fit=max&w=240" class="footer_logo " alt="{{shop_name}}" width="120" border="0" style="width: 120px; height: auto !important; display: block; text-align: left; padding-bottom: 30px; Margin: 0;">
                             <!-- Footer Logo : END -->
                           </a>
@@ -24,7 +24,7 @@
                       </tr>
                       <tr>
                         <!-- BEGIN : 2 COLUMNS : SHOP_BLOCK -->
-                        <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6">
+                        <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 20px;" bgcolor="#fefcf6">
                           <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
                             <tr>
                               <!-- BEGIN : Column 1 of 2 : SHOP_BLOCK -->
@@ -33,7 +33,7 @@
                                   <!-- Store Website : BEGIN -->
                                   <tr>
                                     <th class="column_shop_block1 " width="100%" style="mso-line-height-rule: exactly; padding-right: 15px; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 14px; line-height: 28px; font-weight: 300; color: #000000; text-transform: none; padding-bottom: 0; padding-top: 0;" align="left" bgcolor="#fefcf6" valign="top">
-                                      <a href="{% capture link %}{{shop.url}}{% endcapture %}{% if link contains shop.domain %}{% assign split_link = link | split: question_mark %}{{ split_link[0] }}?{{ default_utms }}&utm_content=footer-website-link{% if split_link[1] != blank %}&{{ split_link[1] }}{% endif %}{% else %}{{ link }}{% endif %}" target="_blank" data-key="section_shop_block1" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px; font-weight: 300; text-transform: none;">ADAMLIPPES.COM</a>
+                                      <a href="https://adamlippes.com/" target="_blank" data-key="section_shop_block1" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px; font-weight: 300; text-transform: none;">ADAMLIPPES.COM</a>
                                     </th>
                                   </tr>
                                   <!-- Store Website : END -->
@@ -66,13 +66,13 @@
                                       column_shop_social_icons
                                       " width="100%" style="mso-line-height-rule: exactly; padding-left: 15px;" align="left" bgcolor="#fefcf6" valign="top">
                                       <a class="social-link" href="https://www.facebook.com/adamlippes/" target="_blank" title="Facebook" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
-                                        <img width="38" class="social-icons" alt="Facebook" src="https://www.orderlyemails.com/facebook_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 30px 30px 0;">
+                                        <img width="38" class="social-icons" alt="Facebook" src="https://www.orderlyemails.com/facebook_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 20px 0px 0;">
                                       </a>
                                       <a class="social-link" href="https://www.instagram.com/adamlippes/" target="_blank" title="Instagram" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
-                                        <img width="38" class="social-icons" alt="Instagram" src="https://www.orderlyemails.com/instagram_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 30px 30px 0;">
+                                        <img width="38" class="social-icons" alt="Instagram" src="https://www.orderlyemails.com/instagram_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 20px 0px 0;">
                                       </a>
                                       <a class="social-link" href="https://www.pinterest.com/adamlippes/" target="_blank" title="Pinterest" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
-                                        <img width="38" class="social-icons" alt="Pinterest" src="https://www.orderlyemails.com/pinterest_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 30px 30px 0;">
+                                        <img width="38" class="social-icons" alt="Pinterest" src="https://www.orderlyemails.com/pinterest_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 20px 0px 0;">
                                       </a>
                                     </th>
                                   </tr>
