--- a/blocks/header_loop_en.liquid
+++ b/blocks/header_loop_en.liquid
@@ -1,7 +1,7 @@
 <br><br>
 <tr>
   <td style="margin-bottom: 60px;padding: 30px 0;" align="center">
-    <div class="img-cont" style="    display: flex;  justify-content: center; width: 560px">
+    <div class="img-cont" style="    display: flex;  justify-content: center; width: 500px">
       <img src="https://cdn.shopify.com/shopify-email/80o85godyj88622sg7eh16o69bbh.jpg?width=960&amp;height=960" alt="Adam Lippes" width="225" height="136" style="margin: auto;">
     </div>
 
@@ -13,9 +13,9 @@
   <td align="center" style="padding-bottom: 30px;">
     <table width="100%" style="text-align: center;">
       <tr>
-        <td style="width: 168px"><a href="#" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Shop</a></td>
-        <td style="width: 168px"><a href="#" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">About</a></td>
-        <td style="width: 168px"><a href="#" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Contact</a></td>
+        <td style="width: 168px"><a href="https://adamlippes.com/collections/woman-view-all" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Shop</a></td>
+        <td style="width: 168px"><a href="https://adamlippes.com/pages/about-adam-lippes" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">About</a></td>
+        <td style="width: 168px"><a href="mailto:customerservice@adamlippes.com" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Contact</a></td>
       </tr>
     </table>
   </td>
