--- a/templates/loop_return_confirmation/en.liquid
+++ b/templates/loop_return_confirmation/en.liquid
@@ -1,17 +1,17 @@
 
 <table role="presentation" width="100%" bgcolor="#FEFCF6" style="background-color: #FEFCF6;" cellpadding="0" cellspacing="0" border="0">
-  <tr>
+  <tr >
     <td align="center">
       <table class="container" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" >
 
 
-        <tr>
+        <tr style="padding-left: 20px; padding-right: 20px;">
           <td width="100%" valign="top" style="padding-top: 60px;">
           <h1 style="font-size: 28px; line-height: 125%; text-align:center; color: #222222; font-weight: 600; display: block;">
               Your return has been submitted.
           </h1>
 
-            <p style="padding-top: 15px; text-align: left; display: block;">Please return your item(s) by {{return_by}}. You can review your shipping instructions by viewing your return with the link below.</p>
+            <p style="padding-left: 20px; padding-right: 20px;padding-top: 15px; text-align: left; display: block;">Please return your item(s) by {{return_by}}. You can review your shipping instructions by viewing your return with the link below.</p>
           </td>
         </tr>
         <!-- //End Thank you text -->
