--- a/blocks/layout_en.liquid
+++ b/blocks/layout_en.liquid
@@ -377,12 +377,14 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style="-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-    {% include 'ifblock.liquid' %}
-    {% include 'header_en.liquid' %}
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
+    <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+      {% include 'ifblock.liquid' %}
+      {% include 'header_en.liquid' %}
 
-    {{ content }}
-    {% include 'footer_en.liquid' %}
+      {{ content }}
+      {% include 'footer_en.liquid' %}
+    </div>
   </body>
 </html>
 
