--- a/templates/order_confirmation/ja.liquid
+++ b/templates/order_confirmation/ja.liquid
@@ -85,27 +85,10 @@
                                                   <h2 style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 20px; line-height: 34px; font-weight: 500; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="left">
                                                     <span data-key="26492699_order_number">ご注文番号：</span> {{ name }}
                                                   </h2>
-                                                  <p class="muted" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 13px; line-height: 30px; font-weight: normal; text-transform: none; color: #828a91; Margin: 0;" align="left">{% assign month = created_at | date: "%B" %}
-{% assign month = created_at | date: "%B" %}
-{% assign month_jp = "" %}
-{% case month %}
-  {% when "January" %} {% assign month_jp = "1月" %}
-  {% when "February" %} {% assign month_jp = "2月" %}
-  {% when "March" %} {% assign month_jp = "3月" %}
-  {% when "April" %} {% assign month_jp = "4月" %}
-  {% when "May" %} {% assign month_jp = "5月" %}
-  {% when "June" %} {% assign month_jp = "6月" %}
-  {% when "July" %} {% assign month_jp = "7月" %}
-  {% when "August" %} {% assign month_jp = "8月" %}
-  {% when "September" %} {% assign month_jp = "9月" %}
-  {% when "October" %} {% assign month_jp = "10月" %}
-  {% when "November" %} {% assign month_jp = "11月" %}
-  {% when "December" %} {% assign month_jp = "12月" %}
-{% endcase %}
+                                                  <p class="muted" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 13px; line-height: 30px; font-weight: normal; text-transform: none; color: #828a91; Margin: 0;" align="left">
+                                                    {% include 'date_jp.liquid' with  created_at %}
 
-{{ created_at | date: "%Y年" }}{{ month_jp }}{{ created_at | date: "%d日" }}
-
-</p>
+                                                  </p>
                                                 {% endif %}
                                               </th>
                                             </tr>
@@ -160,7 +143,7 @@
                                                               </tr>
                                                               <tr>
                                                                 <th style="mso-line-height-rule: exactly; padding-right: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{{ attributes.Delivery-Date | date: "%B %d, %Y" }}</p>
+                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"> {% include 'date_jp.liquid' with   attributes.Delivery-Date %}</p>
                                                                 </th>
                                                               </tr>
                                                             {% endif %}
@@ -202,7 +185,8 @@
                                                               </tr>
                                                               <tr>
                                                                 <th style="mso-line-height-rule: exactly; padding-right: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{{ attributes.Pickup-Date | date: "%B %d, %Y" }}</p>
+                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">
+                                                                   {% include 'date_jp.liquid' with  attributes.Pickup-Date %}</p>
                                                                 </th>
                                                               </tr>
                                                             {% endif %}
@@ -252,7 +236,7 @@
                                                               </tr>
                                                               <tr>
                                                                 <th style="mso-line-height-rule: exactly; padding-right: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{{ attributes.Shipping-Date | date: "%B %d, %Y" }}</p>
+                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"> {% include 'date_jp.liquid' with  attributes.Shipping-Date %}</p>
                                                                 </th>
                                                               </tr>
                                                             {% endif %}
@@ -371,7 +355,7 @@
                                                               </tr>
                                                               <tr>
                                                                 <th style="mso-line-height-rule: exactly; padding-left: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{{ attributes.Delivery-Date | date: "%B %d, %Y" }}</p>
+                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{% include 'date_jp.liquid' with  attributes.Delivery-Date %}</p>
                                                                 </th>
                                                               </tr>
                                                             {% endif %}
@@ -413,7 +397,7 @@
                                                               </tr>
                                                               <tr>
                                                                 <th style="mso-line-height-rule: exactly; padding-left: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{{ attributes.Pickup-Date | date: "%B %d, %Y" }}</p>
+                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{% include 'date_jp.liquid' with  attributes.Pickup-Date %}</p>
                                                                 </th>
                                                               </tr>
                                                             {% endif %}
@@ -463,7 +447,7 @@
                                                               </tr>
                                                               <tr>
                                                                 <th style="mso-line-height-rule: exactly; padding-left: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{{ attributes.Shipping-Date | date: "%B %d, %Y" }}</p>
+                                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">{% include 'date_jp.liquid' with  attributes.Shipping-Date %}</p>
                                                                 </th>
                                                               </tr>
                                                             {% endif %}
