--- a/templates/loop_line_item_rejected/en.liquid
+++ b/templates/loop_line_item_rejected/en.liquid
@@ -4,16 +4,16 @@
       <td width="10">&nbsp;</td>
       <td width="100%" valign="top" style="padding-top: 45px;">
         <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center"
-          class="container" width="100%" style="max-width: 600px;">
-          <tr>
+          class="container" width="100%" style="max-width: 500px;">
+          <tr >
             <td valign="top" width="100%">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
                 <!-- Top section -->
-                <tr>
-                  <td valign="top" width="100%">
+                <tr style="padding-left: 20px; padding-right: 20px;">
+                  <td valign="top" width="100%" style="padding-left: 20px; padding-right: 20px;">
                     <table cellspacing="0" cellpadding="0" border="0" width="100%">
                       <!-- Header -->
-                      <tr>
+                      <tr style="padding-left: 20px; padding-right: 20px;">
                         <td width="100%" valign="top">
                           <table cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
@@ -30,13 +30,12 @@
                       <!-- //End Header -->
 
                       <!-- Thank you text -->
-                      <tr>
+                      <tr style="padding-left: 20px; padding-right: 20px;">
                         <td valign="top" width="100%" style="padding-top: 24px;">
-                          <h1
-                            style="font-size: 42px; line-height: 63px; text-align:left; color: #222222; font-weight: 600; display: block; margin: 0;">
+                          <h1 style="font-size: 42px; line-height: 63px; text-align:left; color: #222222; font-weight: 600; display: block; margin: 0;">
                             One or more of your returned products have been rejected.</h1>
                           {% if rejected_line_items.size > 0 %}
-                          <div style="padding-top: 12px; padding-bottom: 12px;">
+                          <div style="padding-top: 12px; padding-bottom: 12px;padding-left: 20px; padding-right: 20px;"">
                             <p
                               style="padding-bottom: 12px; margin-top: 0; font-size: 24px; line-height: 36px; color: #4A4E5A;">
                               Rejected items can be found below. Any approved items have
@@ -109,8 +108,8 @@
                       <!-- //End Thank you text -->
 
                       <!-- Status page button -->
-                      <tr>
-                        <td width="100%" valign="top" style="padding: 0;">
+                      <tr style="padding-left: 20px; padding-right: 20px;">
+                        <td width="100%" valign="top" >
                           <table style="width:100%;border-spacing:0;border-collapse:collapse">
                             <tbody>
                               <tr>
@@ -143,8 +142,8 @@
                 <!-- // End top section -->
 
                 <!-- Middle top section -->
-                <tr>
-                  <td style="padding-bottom: 55px; padding-top: 40px; max-width: 600px" valign="top"
+                <tr style="padding-left: 20px; padding-right: 20px;">
+                  <td style="padding-bottom: 55px; padding-top: 40px; max-width: 500px" valign="top"
                     width="100%">
                     <table cellspacing="0" cellpadding="0" border="0" width="100%">
                       <!-- Divider -->
