--- a/templates/return_created/ja.liquid
+++ b/templates/return_created/ja.liquid
@@ -172,7 +172,7 @@
                                         <table cellspacing="0" cellpadding="0" border="0" width="100%" style="min-width: 100%; direction: ltr;" role="presentation">
                                           <tr>
                                             <th colspan="2" class="table_main_title" style="mso-line-height-rule: exactly;" bgcolor="#fcf6e5" valign="top">
-                                              <h3 data-key="26492953_item" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-width: 1px; border-bottom-color: #f8ecc8; border-bottom-style: solid; letter-spacing: 1.5px; Margin: 0;" align="left">Returned items</h3>
+                                              <h3 data-key="26492953_item" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-width: 1px; border-bottom-color: #f8ecc8; border-bottom-style: solid; letter-spacing: 1.5px; Margin: 0;" align="left">アダム・リペス オンラインショップ</h3>
                                             </th>
                                           </tr>
                                           {% for line_item in return.line_items %}
