--- a/blocks/layout_en.liquid
+++ b/blocks/layout_en.liquid
@@ -377,14 +377,18 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-    <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
-      {% include 'ifblock.liquid' %}
-      {% include 'header_en.liquid' %}
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#F5F5F5" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; margin: 0; padding: 0;">
+    <div style="background-color: #F5F5F5; padding: 0; margin: 0;">
 
-      {{ content }}
-      {% include 'footer_en.liquid' %}
+      <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+        {% include 'ifblock.liquid' %}
+        {% include 'header_en.liquid' %}
+
+        {{ content }}
+        {% include 'footer_en.liquid' %}
+      </div>
     </div>
+
   </body>
 </html>
 
