--- a/templates/payment_error/ja.liquid
+++ b/templates/payment_error/ja.liquid
@@ -24,7 +24,8 @@
                                                 <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                                   <tr>
                                                     <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                                      <h3 data-key="26492793_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-style: none; letter-spacing: 1.5px; Margin: 0;" align="left">お客様のお支払いを処理できませんでした</h3>
+                                                      <h1 data-key="26492906_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; margin: 0;" align="center">お客様のお支払いを処理できませんでした</h1>
+
                                                     </th>
                                                   </tr>
                                                 </table>
