--- a/templates/draft_order_invoice/ja.liquid
+++ b/templates/draft_order_invoice/ja.liquid
@@ -21,7 +21,7 @@
                                     <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                       <tr>
                                         <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                          <h1 data-key="26492748_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="center">ご購入手続きを完了してください</h1>
+                                          <h1 data-key="26492748_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="center">商品のお取り置き・ご購入手続きのご案内</h1>
                                         </th>
                                       </tr>
                                     </table>
@@ -67,7 +67,7 @@
                                     <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                       <tr>
                                         <th class="sides column_text_before_button" data-key="26492750_text_before_button" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding-bottom: 15px;" align="left" bgcolor="#fefcf6" valign="top">
-                                          <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">ご購入手続きを完了される場合は、以下のボタンをクリックしてください。</p>
+                                          <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left">以下のボタンをクリックして、ご購入手続きをお願いいたします。</p>
                                         </th>
                                       </tr>
                                       <!-- Button : BEGIN -->
@@ -100,8 +100,8 @@
                                     <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"><br>
                                     </p>
                                     <br>
-                                    今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br>
-                                    アダム・リペス オンラインショップ
+                                    今後ともアダム リペスをご愛顧いただけますと幸いです。　<br>
+                                    アダム リペス オンラインショップ
                                   </th>
                                 </tr>
                               </table>
