--- a/templates/out_for_delivery/ja.liquid
+++ b/templates/out_for_delivery/ja.liquid
@@ -104,8 +104,8 @@
                                                 <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"><br>
                                                 </p>
                                                 <br>
-                                                今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br>
-                                                アダム・リペス オンラインショップ
+                                                今後ともアダム リペスをご愛顧いただけますと幸いです。　<br>
+                                                アダム リペス オンラインショップ
                                               </th>
                                             </tr>
                                           </table>
