--- a/templates/payment_error/ja.liquid
+++ b/templates/payment_error/ja.liquid
@@ -51,7 +51,7 @@
                                                 {% endif %}
                                                 <span data-key="26492794_introduction_text" class="text" style="text-align: left; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000;">
                                                   <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 15px 0 0;" align="left"></p>
-                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 15px 0 0;" align="left">ショッピングカートに商品を追加されましたが、お支払いの処理が完了しませんでした。料金はまだ請求されておりません。</p>
+                                                  <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 15px 0 0;" align="left">ショッピングカートに入れた商品のお支払いの処理が完了しませんでした。決済はまだ完了しておりません。</p>
                                                 </span>
                                               </th>
                                             </tr>
@@ -67,7 +67,7 @@
                                               <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6" valign="top">
                                                 <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                                   <tr>
-                                                    <th class="sides column_text_before_button" data-key="26492795_text_before_button" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding-bottom: 15px;" align="left" bgcolor="#fefcf6" valign="top">引き続きカートに戻って、ご購入手続きを完了していただけます。                                                    </th>
+                                                    <th class="sides column_text_before_button" data-key="26492795_text_before_button" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding-bottom: 15px;" align="left" bgcolor="#fefcf6" valign="top">再度ショッピングカートに戻って、お支払い手続きをお願いいたします。                                                    </th>
                                                   </tr>
                                                   <!-- Button : BEGIN -->
                                                   <tr>
@@ -99,8 +99,8 @@
                                                 <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"><br>
                                                 </p>
                                                 <br>
-                                                今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br>
-                                                アダム・リペス オンラインショップ
+                                                今今後ともアダム リペスをご愛顧いただけますと幸いです。　　<br>
+                                                アダム リペス オンラインショップ
                                               </th>
                                             </tr>
                                           </table>
