--- a/templates/order_cancelled/ja.liquid
+++ b/templates/order_cancelled/ja.liquid
@@ -60,7 +60,7 @@
                                 <tr>
                                   <th data-key="26492731_closing_text" class="section_content text" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding: 8px 30px;" align="left" bgcolor="#fefcf6" valign="top">ご不明な点やご質問がございましたら、どうぞお気軽に&nbsp;<a href="mailto: contact.jp@adamlippes.com" style="color: #000000 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; border-bottom-width: 1px; border-bottom-color: #5f5f5f; border-bottom-style: solid;"> contact.jp@adamlippes.com </a>&nbsp; までご連絡くださいませ。
                                   <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; margin: 0;" align="left"><br></p>
-                                <br> 今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br> アダム・リペス オンラインショップ</th>
+                                <br> 今後ともアダム リペスをご愛顧いただけますと幸いです。　　<br> アダム リペス オンラインショップ</th>
                               </tr>
                             </tbody>
                           </table>
