--- a/templates/order_edited/ja.liquid
+++ b/templates/order_edited/ja.liquid
@@ -24,7 +24,7 @@
                                                 <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                                   <tr>
                                                     <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                                      <h1 data-key="26492705_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="center">ご注文内容のの変更について</h1>
+                                                      <h1 data-key="26492705_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="center">ご注文内容の変更について</h1>
                                                     </th>
                                                   </tr>
                                                 </table>
@@ -75,7 +75,7 @@
                                                       <table cellspacing="0" cellpadding="0" border="0" class="button" role="presentation" style="direction: ltr; text-align: center; Margin: 0 auto;" bgcolor="transparent">
                                                         <tr>
                                                           <th class="button-inner" style="mso-line-height-rule: exactly; border-radius: 1px;" align="center" bgcolor="#000000" valign="top">
-                                                            <a class="button-link" href="{{order_status_url}}" target="_blank" style="color: #fefcf6 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; line-height: 15px; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; font-weight: 500; text-transform: none; text-align: center; display: block; background-color: #000000; border-radius: 1px; padding: 1px 20px; border: 15px solid #000000;"><span class="text-on-button" style="line-height: 15px; color: #fefcf6; font-weight: 500; text-decoration: none; text-underline: none; letter-spacing: 0.5px;"><!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--><span class="text-on-button-inner" data-key="26492707_text_on_button" style="line-height: 15px; color: #fefcf6; font-weight: 500; text-decoration: none; text-underline: none; letter-spacing: 0.5px;"> 注文状況を確認する ></span><!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--></span></a>
+                                                            <a class="button-link" href="{{order_status_url}}" target="_blank" style="color: #fefcf6 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; line-height: 15px; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; font-weight: 500; text-transform: none; text-align: center; display: block; background-color: #000000; border-radius: 1px; padding: 1px 20px; border: 15px solid #000000;"><span class="text-on-button" style="line-height: 15px; color: #fefcf6; font-weight: 500; text-decoration: none; text-underline: none; letter-spacing: 0.5px;"><!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--><span class="text-on-button-inner" data-key="26492707_text_on_button" style="line-height: 15px; color: #fefcf6; font-weight: 500; text-decoration: none; text-underline: none; letter-spacing: 0.5px;"> 注文状況を確認する </span><!--[if mso]>&nbsp;&nbsp;&nbsp;&nbsp;<![endif]--></span></a>
                                                           </th>
                                                         </tr>
                                                       </table>
@@ -95,11 +95,11 @@
                                           <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
                                             <tr>
                                               <th data-key="26492708_closing_text" class="section_content text" style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; padding: 8px 30px;" align="left" bgcolor="#fefcf6" valign="top">
-                                                ご不明な点やご質問がございましたら、どうぞお気軽に<a href="mailto: contact.jp@adamlippes.com" style="color: #000000 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; border-bottom-width: 1px; border-bottom-color: #5f5f5f; border-bottom-style: solid;"> contact.jp@adamlippes.com </a>までご連絡くださいませ。
+                                                ご不明な点やご質問がございましたら、どうぞお気軽に<br><a href="mailto: contact.jp@adamlippes.com" style="color: #000000 !important; text-decoration: none !important; text-underline: none; word-wrap: break-word; border-bottom-width: 1px; border-bottom-color: #5f5f5f; border-bottom-style: solid;"> contact.jp@adamlippes.com </a>までご連絡くださいませ。
                                                 <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"><br>
                                                 </p>
-                                                <br>今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br>
-                                                アダム・リペス オンラインショップ
+                                                <br>今後ともアダム リペスをご愛顧いただけますと幸いです。　　<br>
+                                                アダム リペス オンラインショップ
                                               </th>
                                             </tr>
                                           </table>
@@ -165,7 +165,7 @@
                                                         <table cellspacing="0" cellpadding="0" border="0" width="100%" style="min-width: 100%; direction: ltr; border: #fefcf6;" role="presentation" bgcolor="#fefcf6">
                                                           <tr style="border: #fefcf6;" bgcolor="#fefcf6">
                                                             <th colspan="2" class="table_main_title" style="mso-line-height-rule: exactly; border: #fefcf6;" bgcolor="#fefcf6" valign="top">
-                                                              <h3 data-key="26492711_item" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-width: 1px; border-bottom-style: solid; letter-spacing: 1.5px; background-color: #fefcf6 !important; Margin: 0; border: #fefcf6;" align="left">更新後のご注文内容</h3>
+                                                              <h3 data-key="26492711_item" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; color: #2e2a39; font-size: 18px; line-height: 34px; font-weight: 500; text-transform: none; border-bottom-width: 1px; border-bottom-style: solid; letter-spacing: 1.5px; background-color: #fefcf6 !important; Margin: 0; border: #fefcf6;" align="left">変更後のご注文内容</h3>
                                                             </th>
                                                           </tr>
                                                           {% for line_item in subtotal_line_items %}
