--- a/templates/order_shipping_confirmation/ja.liquid
+++ b/templates/order_shipping_confirmation/ja.liquid
@@ -24,7 +24,7 @@
                                                 <table cellspacing="0" cellpadding="0" border="0" width="100%" role="presentation" style="direction: ltr;">
                                                   <tr>
                                                     <th style="mso-line-height-rule: exactly;" bgcolor="#fefcf6" valign="top">
-                                                      <h1 data-key="26492830_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="center">配送完了のお知らせ</h1>
+                                                      <h1 data-key="26492830_heading" style="font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 30px; line-height: 58px; font-weight: 500; color: #2e2a39; text-transform: none; letter-spacing: 1.5px; Margin: 0;" align="center">発送完了のお知らせ</h1>
                                                     </th>
                                                   </tr>
                                                 </table>
@@ -106,8 +106,8 @@
                                                 <p style="mso-line-height-rule: exactly; direction: ltr; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 15px; line-height: 30px; font-weight: 300; text-transform: none; color: #000000; Margin: 0;" align="left"><br>
                                                 </p>
                                                 <br>
-                                                今後ともアダム・リペスをご愛顧いただけますと幸いです。　<br>
-                                                アダム・リペス オンラインショップ
+                                                今後ともアダム リペスをご愛顧いただけますと幸いです。　<br>
+                                                アダム リペス オンラインショップ
                                               </th>
                                             </tr>
                                           </table>
